--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Profil Page</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/style-ku.css">
+	<link rel="stylesheet" type="text/css" href="css/style-ku.css">
 	<style>
 		#arkademy-class{
 			height: 150px;
@@ -25,7 +25,7 @@
 	</nav>
 	<section id="box-profile">
 		<div class="img-profile">
-			<div class="photo" style="background-image: url(assets/img/profile.jpg);"></div>
+			<div class="photo" style="background-image: url(img/profile.jpg);"></div>
 		</div>
 		<div class="description">
 			<h1>Joyse maydossiming</h1>
